--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,12 @@
     <sourceDirectory>src</sourceDirectory>
     
     <plugins>
-      <!-- <plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>10</release>
         </configuration>
-      </plugin> -->
+      </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.1</version>
